# packaging

./: .gitignore  README.md
crates/: Cargo.toml  README.md
crates/src/: main.rs
npm/: README.md  package.json
pypi/: README.md  pyproject.toml
pypi/plactl/: __init__.py  __main__.py
