[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plactl"
version = "0.0.1"
description = "plactl — platform control. Official name reservation for the plactl CLI; real releases will ship here."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Luke Diliberto" }]
keywords = ["plactl", "internal-developer-platform", "idp", "platform-engineering"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/plactl"

[project.scripts]
plactl = "plactl:main"
